# reaarangingpixels

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md  bildformat  ideas.txt
old/: latex.tex  sample_random_pic.cpp  sample_random_vid.cpp  sample_random_vid_s_pat.cpp  shadow_alt.txt  txt_to_dist_draw.cpp  txt_to_dist_draw2.cpp  txt_to_dist_draw3.cpp  txt_to_dist_draw_s.cpp  txt_to_draw.cpp  txts_to_dist_vid.cpp  txts_to_mp4.cpp  txts_to_mp4_n.cpp
source/: allfred.cpp  collmap.cpp  collmap.hpp  compressor.cpp  evaluate_picture.cpp  evaluate_picture_old.cpp  loop_analysis.cpp  matrix.cpp  matrix.hpp  mems.cpp  mirror.cpp  multipix.hpp  pixel.cpp  pixel.hpp  point.cpp  point.hpp  randomize_picture_for_beamer.cpp  rpf_reader.cpp  rpf_writer.cpp  rsf_writer.cpp  rsf_writer.hpp  sample_example.cpp  superpixel.cpp  superpixel.hpp
source/evaluation/: evaluate.cpp  evaluate_old.cpp
source/interpretation/: interpret.cpp
source/sampling/: sample.cpp
source/sorting/: portioner.cpp
